# tinyUSBpp

./: CMakeLists.txt  README.md
class/cdc/: CMakeLists.txt  usb_cdc_acm_device.cpp  usb_cdc_acm_device.h  usb_cdc_defines.h  usb_cdc_structs.h  usb_fd_acm.cpp  usb_fd_acm.h  usb_fd_base.h  usb_fd_call_mgmt.cpp  usb_fd_call_mgmt.h  usb_fd_header.cpp  usb_fd_header.h  usb_fd_union.cpp  usb_fd_union.h
class/msc/: CMakeLists.txt  scsi_structs.h  usb_msc_bot_device.cpp  usb_msc_bot_device.h  usb_msc_defines.h  usb_msc_structs.h
drivers/: CMakeLists.txt
drivers/rp2040-YAHAL/: CMakeLists.txt  usb_dcd.cpp  usb_dcd.h  usb_dcd_rp2040.cpp  usb_endpoint_rp2040.cpp  usb_endpoint_rp2040.h
drivers/rp2040-sdk/: CMakeLists.txt  usb_dcd.cpp  usb_dcd.h  usb_dcd_rp2040.cpp  usb_endpoint_rp2040.cpp  usb_endpoint_rp2040.h
drivers/rp2350-YAHAL/: CMakeLists.txt  usb_dcd.cpp  usb_dcd.h  usb_endpoint_rp2350.cpp  usb_endpoint_rp2350.h
drivers/rp2350-sdk/: CMakeLists.txt  usb_dcd.cpp  usb_dcd.h  usb_endpoint_rp2350.cpp  usb_endpoint_rp2350.h
examples/cdc_acm_dev_pdp8/: .gitignore  CMakeLists.txt  cdc_acm_dev_pdp8.cpp
examples/cdc_acm_dev_simple/: CMakeLists.txt  cdc_acm_dev_simple.cpp
examples/msc_ram_drive/: CMakeLists.txt  msc_ram_drive.cpp
src/: CMakeLists.txt  usb_bos.cpp  usb_bos.h  usb_bos_dev_cap.h  usb_config.h  usb_configuration.cpp  usb_configuration.h  usb_dcd_interface.h  usb_device.cpp  usb_device.h  usb_device_controller.cpp  usb_device_controller.h  usb_endpoint.cpp  usb_endpoint.h  usb_fifo.h  usb_interface.cpp  usb_interface.h  usb_interface_association.cpp  usb_interface_association.h  usb_log.cpp  usb_log.h  usb_strings.cpp  usb_strings.h  usb_structs.h
src/usb_ms/: CMakeLists.txt  usb_ms_OS_20_capability.cpp  usb_ms_OS_20_capability.h  usb_ms_WebUSB_capability.cpp  usb_ms_WebUSB_capability.h  usb_ms_compat_descriptor.cpp  usb_ms_compat_descriptor.h  usb_ms_compatible_ID.cpp  usb_ms_compatible_ID.h  usb_ms_config_subset.cpp  usb_ms_config_subset.h  usb_ms_descriptor_base.h  usb_ms_dev_cap_platform.h  usb_ms_dev_cap_webusb.h  usb_ms_feature.h  usb_ms_func_subset.cpp  usb_ms_func_subset.h  usb_ms_header.cpp  usb_ms_header.h  usb_ms_parent.cpp  usb_ms_parent.h  usb_ms_registry_property.cpp  usb_ms_registry_property.h  usb_ms_structs.h
